# Artisan_Platform

./: Cargo.toml  README.md  file  ghcli_install.py  makefile  nvm_install.py
src/: mail.rs  test.rs
src/aggregator/: aggregator.rs  client.rs
src/cli/: git_credentials.rs  query.rs
src/common/lib/: apache.rs  common.rs  constants.rs  directive.rs  dusa.rs  dusa_wrapper.rs  git.rs  git_data.rs  log.rs  mailing.rs  main.rs  manager.rs  messages.rs  monitor.rs  network.rs  node.rs  pm2.rs  setcap.rs  socket.rs  structs.rs  system.rs  systemd.rs  version.rs
src/directive/: main.rs
src/github/: main.rs
src/mailer/: main.rs
src/manager/: client.rs
src/manager/server/: main.rs  network.rs
src/manager/tui/: main.rs  ui.rs
src/stress/: main.rs
src/systemd/: main.rs
src/tracking/: main.rs
src/welcome/: main.rs
tests/: main_tests.rs
